--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.2.22",
     "astro": "^4.5.2",
+    "astro-seo-metadata": "^0.6.0",
     "framer-motion": "^11.0.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
